--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
   <meta name='twitter:image' content='https://blackscreen.app/images/icon-192x192.png'>
   <meta name='twitter:creator' content='@pyxeldev'>
   <script id="myownstats" data-mos-id="blackscreen" src="https://myownstats.com/tag.js" async defer></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8241284654733649"
-     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="modal" id="modal-info">
@@ -43,6 +41,7 @@
       <h2>Just a black web page</h2>
       <p>Created by <a href="https://kevinpy.com" target="_blank">Kevin Py</a> for <a href="https://pyxel.dev" target="_blank">Pyxel</a>.</p>
       <p>Find the repository on <a href="https://gitlab.com/pyxeldev/blackscreen" target="_blank">Gitlab</a>.</p>
+      <p><a href="https://youtu.be/8H7mnObTScg" target="_blank">A 10 hours black screen video</a></p>
       <button class="modal-close modal-exit" autofocus>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
       </button>
