deploy: d5fae6c39d71ac8d1b6dea696c79e224827c88be

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <h2>Just a black web page</h2>
         <p>
           Created by
-          <a href="https://kevinpy.com" target="_blank">Kevin Py</a> for
-          <a href="https://pyxel.dev" target="_blank">Pyxel</a>.
+          <a href="https://kevinpy.com" target="_blank">Kevin Py</a>.
         </p>
         <p>
           Find the repository on
-          <a href="https://gitlab.com/pyxeldev/blackscreen" target="_blank"
-            >Gitlab</a
+          <a href="https://github.com/KevinPy/blackscreen" target="_blank"
+            >GitHub</a
+          >
           >.
         </p>
         <p>
