--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
           <a href="https://youtu.be/8H7mnObTScg" target="_blank"
             >A 10 hours black screen video</a
           >
+          -
+          <a
+            href="https://stats.pyxel.dev/websites/03362717-9e9a-40e4-8f77-28cbb2b2af29"
+            target="_blank"
+            >Stats</a
+          >
         </p>
         <button class="modal-close modal-exit" autofocus>
           <svg
