deploy: 50bdcfe715aa8a02ff216d3c09e09f9c131ed193

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           >
           -
           <a
-            href="https://stats.pyxel.dev/websites/03362717-9e9a-40e4-8f77-28cbb2b2af29"
+            href="https://stats.pyxel.dev/share/Ng4aXnNiM6wSo4Mo/blackscreen.app"
             target="_blank"
             >Stats</a
           >
