--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
     <title>Black Screen</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <style>html {background-color: #000000}</style>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20width%3D%221%22%20height%3D%221%22%20viewBox%3D%220%200%201%201%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Crect%20width%3D%221%22%20height%3D%221%22%20fill%3D%22%23000000%22%2F%3E%3C%2Fsvg%3E" />
+    <style>html{background-color:000000}</style>
   </head>
   <body>
     <script>
