--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,1 @@
-<html>
-  <head>
-    <title>Black Screen</title>
-    <link rel="icon" href="data:image/svg+xml,%3Csvg%20width%3D%221%22%20height%3D%221%22%20viewBox%3D%220%200%201%201%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Crect%20width%3D%221%22%20height%3D%221%22%20fill%3D%22%23000000%22%2F%3E%3C%2Fsvg%3E" />
-    <style>html{background-color:000000}</style>
-  </head>
-  <body>
-    <script>
-    document.addEventListener("dblclick", () =>
-      document.fullscreenElement ? document.exitFullscreen() : document.documentElement.requestFullscreen()
-    );
-    </script>
-  </body>
-</html>
+<title>Black Screen</title><link rel="icon" href="data:image/svg+xml,%3Csvg%20width%3D%221%22%20height%3D%221%22%20viewBox%3D%220%200%201%201%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Crect%20width%3D%221%22%20height%3D%221%22%20fill%3D%22%23000000%22%2F%3E%3C%2Fsvg%3E" /><style>html{background-color:000000}</style><script>d=document;d.addEventListener("dblclick",()=>d.fullscreenElement?d.exitFullscreen():d.documentElement.requestFullscreen())</script>
